--- a/app/views/relations/entity.html.haml
+++ b/app/views/relations/entity.html.haml
@@ -44,50 +44,50 @@
 
  
 =tabbox(:entity) do |tb|
-  -tb.tab(tc(:x_subscriptions, :count=>@entity.subscriptions.count)) do |c|
-    -c << toolbar do
-      -link(:subscription_create, :controller=>:management, :entity_id=>@entity.id)
-    -c << kame(:entity_subscriptions)
-  -tb.tab(tc(:x_contacts, :count=>@entity.contacts.count)) do |c|
-    -c << toolbar do
-      -link(:contact_create, :entity_id=>@entity.id)
-    -c << kame(:entity_contacts)
-  -tb.tab(tc(:x_sales_orders, :count=>@entity.sales_orders.count)) do |c|
-    -c << toolbar do |t|
+  -tb.tab(tl(:x_subscriptions, :count=>@entity.subscriptions.count)) do
+    =toolbar do |t|
+      -t.link(:subscription_create, :controller=>:management, :entity_id=>@entity.id)
+    =kame(:entity_subscriptions)
+  -tb.tab(tl(:x_contacts, :count=>@entity.contacts.count)) do
+    =toolbar do |t|
+      -t.link(:contact_create, :entity_id=>@entity.id)
+    =kame(:entity_contacts)
+  -tb.tab(tl(:x_sales_orders, :count=>@entity.sales_orders.count)) do
+    =toolbar do |t|
       -t.link(:sales_order_create, :controller=>:management, :client_id=>@entity.id)
-    -c << kame(:entity_sales_orders)
-  -tb.tab(tc(:x_purchase_orders, :count=>@entity.purchase_orders.count)) do |c|
-    -c << toolbar do |t|
+    =kame(:entity_sales_orders)
+  -tb.tab(tl(:x_purchase_orders, :count=>@entity.purchase_orders.count)) do
+    =toolbar do |t|
       -t.link(:purchase_order_create, :controller=>:management, :supplier_id=>@entity.id)
-    -c << kame(:entity_purchase_orders)
-  -tb.tab(tc(:x_sales_invoices, :count=>@entity.sales_invoices.count)) do |c|
-    -c << kame(:entity_sales_invoices)
-  -tb.tab(tc(:x_incoming_payments, :count=>@entity.incoming_payments.count)) do |c|
-    -c << toolbar do
-      -link :incoming_payment_create,{:controller=>:management, :payer_id=>@entity.id}
-    -c << kame(:entity_incoming_payments)
-  -tb.tab(tc(:x_outgoing_payments, :count=>@entity.outgoing_payments.size)) do |c|
-    -c << toolbar do
-      -link :outgoing_payment_create,{:controller=>:management, :payee_id=>@entity.id}
-    -c << kame(:entity_outgoing_payments)
-  -tb.tab(tc(:x_events, :count=>@entity.events.count)) do |c|
-    -c << toolbar do
-      -link :event_create, :entity_id=>@entity.id
-    -c << kame(:entity_events)
+    =kame(:entity_purchase_orders)
+  -tb.tab(tl(:x_sales_invoices, :count=>@entity.sales_invoices.count)) do
+    =kame(:entity_sales_invoices)
+  -tb.tab(tl(:x_incoming_payments, :count=>@entity.incoming_payments.count)) do
+    =toolbar do |t|
+      -t.link :incoming_payment_create,{:controller=>:management, :payer_id=>@entity.id}
+    =kame(:entity_incoming_payments)
+  -tb.tab(tl(:x_outgoing_payments, :count=>@entity.outgoing_payments.size)) do
+    =toolbar do |t|
+      -t.link :outgoing_payment_create,{:controller=>:management, :payee_id=>@entity.id}
+    =kame(:entity_outgoing_payments)
+  -tb.tab(tl(:x_events, :count=>@entity.events.count)) do
+    =toolbar do |t|
+      -t.link :event_create, :entity_id=>@entity.id
+    =kame(:entity_events)
   -el_count = @current_company.entity_links.find(:all, :conditions=>["stopped_on IS NULL AND ? IN (entity_1_id, entity_2_id)", @entity.id]).size
-  -tb.tab(tc(:x_entity_links, :count=>el_count)) do |c|
-    -c << toolbar do
-      -link :entity_link_create, {:entity_id=>@entity.id}
-    -c << kame(:entity_links)
-  -tb.tab(tc(:x_observations, :count=>@entity.observations.count)) do |c|
-    -c << toolbar do
-      -link :observation_create, {:entity_id=>@entity.id}
-    -c << kame(:entity_observations)
-  -tb.tab(tc(:x_mandates, :count=>@entity.mandates.count)) do |c|
-    -c << toolbar do
-      -link :mandate_create, {:entity_id=>@entity.id}
-    -c << kame(:entity_mandates)
-  -tb.tab(tc(:x_cashes, :count=>@entity.cashes.count)) do |c|
-    -c << toolbar do
-      -link :cash_create, {:controller =>:accountancy, :entity_id=>@entity.id}
-    -c << kame(:entity_cashes)
+  -tb.tab(tl(:x_entity_links, :count=>el_count)) do
+    =toolbar do |t|
+      -t.link :entity_link_create, {:entity_id=>@entity.id}
+    =kame(:entity_links)
+  -tb.tab(tl(:x_observations, :count=>@entity.observations.count)) do
+    =toolbar do |t|
+      -t.link :observation_create, {:entity_id=>@entity.id}
+    =kame(:entity_observations)
+  -tb.tab(tl(:x_mandates, :count=>@entity.mandates.count)) do
+    =toolbar do |t|
+      -t.link :mandate_create, {:entity_id=>@entity.id}
+    =kame(:entity_mandates)
+  -tb.tab(tl(:x_cashes, :count=>@entity.cashes.count)) do
+    =toolbar do |t|
+      -t.link :cash_create, {:controller =>:accountancy, :entity_id=>@entity.id}
+    =kame(:entity_cashes)
