Corrects some bugs on accountancy due to bad names. Change attributes names in Kame in order to support HTML5
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1690 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account.html.haml
+++ b/app/views/accountancy/account.html.haml
@@ -1,7 +1,6 @@
 =toolbar do |t|
-  -t.update @account
-  -if @account.letterable?
-    -t.letter @account
+  -t.update(@account)
+  -t.mark(@account) if @account.markable?
 %table.full-width
   %tr
     %td
