--- a/app/views/accountancy/bank_statement.html.haml
+++ b/app/views/accountancy/bank_statement.html.haml
@@ -2,13 +2,14 @@
   -t.update @bank_statement
   -t.point @bank_statement
 
-=evalue(@bank_statement, :number)
-=evalue(@bank_statement, :cash, :url=>{:action=>:cash})
-=evalue(@bank_statement, :credit)
-=evalue(@bank_statement, :debit)
-=evalue(@bank_statement, :started_on)
-=evalue(@bank_statement, :stopped_on)
+=attributes_list(@bank_statement) do |l|
+  -l.attribute(:number)
+  -l.attribute(:cash, :url=>{:action=>:cash, :controller=>:finances})
+  -l.attribute(:credit)
+  -l.attribute(:debit)
+  -l.attribute(:started_on)
+  -l.attribute(:stopped_on)
 
-%h2=tc(:journal_entry_lines)
-=kame(:bank_statement_entries)
+%h2=BankStatement.human_attribute_name("lines")
+=kame(:bank_statement_lines)
 
