--- a/app/views/accountancy/account_mark.html.haml
+++ b/app/views/accountancy/account_mark.html.haml
@@ -8,10 +8,11 @@
         %td.field=calendar_field_tag :stopped_on, params[:stopped_on]
         %td.submit=submit_tag(tg(:filter), :name=>nil)
 =toolbar do |t|
-  -t.link :unmarked_journal_entry_lines, {:id=>session[:current_lettering_mode]}
-
-=evalue @account, :name, :url=>{:action=>:account, :id=>@account.id}
-=evalue @account, :number, :url=>{:action=>:account, :id=>@account.id}
+  -t.link :unmarked_journal_entry_lines, {:mode=>session[:mode]}
+=attributes_list(@account) do |l|
+  -l.attribute :name, :url=>{:action=>:account, :id=>@account.id}
+  -l.attribute :number, :url=>{:action=>:account, :id=>@account.id}
+  -l.attribute :comment
 
 %h2=tc(:current_letter, :letter=>@letter)
 
@@ -33,16 +34,16 @@
       %tr{:id=>trid, :class=>(checked ? "notice " :  (@journal_entry_line.letter.blank? ? "" : ""))+cycle("even", "odd")}
         %td.chk
           -if @journal_entry_line.letter.blank? or checked
-            =check_box_tag("journal_entry_line[#{@journal_entry_line.id}][to_letter]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t2();", :id=>"journal_entry_line_#{@journal_entry_line.id}_to_letter" )
+            =check_box_tag("journal_entry_line[#{@journal_entry_line.id}][to_mark]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t2();", :id=>"journal_entry_line_#{@journal_entry_line.id}_to_mark" )
           -else
             =@journal_entry_line.letter
-            =link_to(image_tag(theme_button(:unletter), :border=>0), {:action=>:account_unmark, :id=>@account.id, :letter=>@journal_entry_line.letter}, :method=>:post, :confirm=>tg(:are_you_sure))
+            =link_to(image_tag(theme_button(:unmark), :border=>0), {:action=>:account_unmark, :id=>@account.id, :letter=>@journal_entry_line.letter}, :method=>:post, :confirm=>tg(:are_you_sure))
         %td.date=I18n.localize(@journal_entry_line.entry.printed_on)
         %td=link_to(@journal_entry_line.journal.name, {:action=>:journal, :id=>@journal_entry_line.journal_id}, :keep=>true)
         %td.code=link_to(@journal_entry_line.entry.number, {:action=>:journal_entry, :id=>@journal_entry_line.entry_id}, :keep=>true)
-        %td.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_to_letter')"}=@journal_entry_line.name
-        %td.decimal.debit.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_to_letter')"}=number_to_accountancy(@journal_entry_line.debit)
-        %td.decimal.credit.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_to_letter')"}=number_to_accountancy(@journal_entry_line.credit)
+        %td.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_to_mark')"}=@journal_entry_line.name
+        %td.decimal.debit.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_to_mark')"}=number_to_accountancy(@journal_entry_line.debit)
+        %td.decimal.credit.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_to_mark')"}=number_to_accountancy(@journal_entry_line.credit)
     %tr#total.total
       %th{:colspan=>5}=tg(:total)
       %td#total-debit=0
