--- a/app/views/accountancy/journal_entry.html.haml
+++ b/app/views/accountancy/journal_entry.html.haml
@@ -7,7 +7,7 @@
   -l.attribute :printed_on
   -l.attribute :created_on
   -if @journal_entry.resource
-    -l.attribute :resource, :url=>{:controller=>(@journal_entry.resource_type.match(/Cash/) ? :accountancy : :management), :action=>@journal_entry.resource_type.underscore}
+    -l.attribute :resource, :url=>{:controller=>(@journal_entry.resource_type.match(/(Cash|Payment)/) ? :finances : :management), :action=>@journal_entry.resource_type.underscore}
   -l.attribute :journal, :url=>{:action=>:journal}
   -l.attribute :debit
   -l.attribute :credit
