--- a/public/themes/tekyla/stylesheets/print.css
+++ b/public/themes/tekyla/stylesheets/print.css
@@ -6,13 +6,13 @@ h1 { font-size: 16pt; font-weight: normal; border-bottom: 0.1mm solid black; mar
 
 #main { width: 100%; }
 
-.dyta { border-collapse: collapse; width: 100%; }
-.dyta th, .dyta td { border: 0.1mm solid black; padding: 0.5mm; text-decoration:none;}
-.dyta th, .dyta th a { font-weight: bold; background: #DDD; color: black; text-decoration: none; }
-.dyta td, .dyta td a { color: black; text-decoration: none; }
+.kame { border-collapse: collapse; width: 100%; }
+.kame th, .kame td { border: 0.1mm solid black; padding: 0.5mm; text-decoration:none;}
+.kame th, .kame th a { font-weight: bold; background: #DDD; color: black; text-decoration: none; }
+.kame td, .kame td a { color: black; text-decoration: none; }
 
-.dyta tr.empty td { padding: 5mm; text-align:center; }
-.dyta th.footer .export { display: none; }
+.kame tr.empty td { padding: 5mm; text-align:center; }
+.kame tfoot { display: none; }
 
 .checkbox-true:before { content: '☑'; font-size: 12pt; }
 .checkbox-false:before { content: '☐'; font-size: 12pt;}
