--- a/app/views/accountancy/general_ledger.html.haml
+++ b/app/views/accountancy/general_ledger.html.haml
@@ -1,35 +1,15 @@
--max = @current_company.accounts.calculate(:maximum, Account.connection.length("COALESCE(number, '')")).to_i
 =form_tag({}, :method=>:get) do
   .search
     %table
       %tr 
-        %td.crit
-          -fy = @current_company.current_financial_year
-          %label{:for=>:started_on}=tg(:from)
-          =calendar_field_tag("started_on", params[:started_on]||(fy ? fy.started_on : Date.today.beginning_of_month))
-          %label{:for=>:stopped_on}=tg(:to)
-          =calendar_field_tag("stopped_on", params[:stopped_on]||(fy ? fy.stopped_on : Date.today.end_of_month))
+        %td.crit=journal_period_crit
         %td.submit{:rowspan=>5}=submit_tag tg(:display), :name=>nil
       %tr
-        %td.crit
-          %label=tc(:journal_entry_lines_states)
-          -states = [:draft, :confirmed, :closed]
-          -no_state = !states.detect{|x| !params[x].nil?}
-          -for state in states
-            =check_box_tag(state, "1", (params[state]=="1" or no_state))
-            %label{:for=>state}=tc(state)
+        %td.crit=journal_entries_states_crit
       %tr
-        %td.crit
-          =tc(:accounts)
-          =text_field_tag("accounts", params[:accounts]||"1-9", :size=>30)
+        %td.crit=accounts_range_crit
       %tr
-        %td.crit
-          -journals = @current_company.journals.find(:all, :conditions=>["id IN (SELECT journal_id FROM journal_entry_lines WHERE company_id=? AND draft=?)", @current_company.id, true])
-          -no_journal = !journals.detect{|x| !params["journal_#{x.id}"].nil?}
-          -for journal in journals
-            -name="journal_#{journal.id}"
-            =check_box_tag(name, "1", (params[name] == "1" or no_journal))
-            %label{:for=>name}=journal.name
+        %td.crit=journals_crit
 
 -if session[:general_ledger] and session[:general_ledger][:accounts]
   =kame(:general_ledger)
