--- a/app/views/finances/_incoming_payment_mode_form.html.haml
+++ b/app/views/finances/_incoming_payment_mode_form.html.haml
@@ -14,14 +14,14 @@
   #deposit
     =formalize do |f|
       -f.title :deposit
-      -f.field :incoming_payment_mode, :depositables_account_id, :choices=>{:reflection=>:payments_to_deposit_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create, :number=>preference("accountancy.accounts.financial_payments_to_deposit").value}, :resize=>true
+      -f.field :incoming_payment_mode, :depositables_account_id, :choices=>{:reflection=>:payments_to_deposit_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create, :number=>@current_company.preferred_financial_payments_to_deposit_accounts}, :resize=>true
 
   #commission
     =formalize do |f|
       -f.title :commission
       -f.field :incoming_payment_mode, :commission_base_amount
       -f.field :incoming_payment_mode, :commission_percent
-      -f.field :incoming_payment_mode, :commission_account_id, :choices=>{:reflection=>:charges_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create, :number=>preference("accountancy.accounts.charges").value}, :resize=>true
+      -f.field :incoming_payment_mode, :commission_account_id, :choices=>{:reflection=>:charges_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create, :number=>@current_company.preferred_charges_accounts}, :resize=>true
 
 :javascript
   window.toggleAccountancy = function() { toggleElement('accountancy', $('incoming_payment_mode_with_accounting').checked); }
