--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -431,7 +431,7 @@ html[dir="rtl"] .login table tr td.label { text-align:left !important; }
 /*div.flash-error {text-align:center; color:red; font-style:italic;height:20px;padding: 16px; margin-top: 64px; }*/
 
 .window { padding:4px; background: #EEE; border: 1px solid #AAA; margin: 8px; }
-.window .dyta { background: white; }
+.window .kame { background: white; }
 
 
 /* Droits utilisateurs */
@@ -504,14 +504,14 @@ html[dir="rtl"] .branch .item .item-tool { text-align: left; }
 .journals.tabbox .tabs { padding: 0 8px; background: url(../images/shadow-top.png) repeat-x bottom; }
 .journals.tabbox .tabs .tab { background-image: url(../images/shadow-top.png); background-repeat: repeat-x; background-position: center bottom; }
 .journals.tabbox .tabs .tab.current{ background: #F7F7FF; }
-.journals.tabbox .tabs .tab.special{ border-top: 3px solid #95b0e4;  }
+.journals.tabbox .tabs .tab.special{ color: #710; } /*border-top: 3px solid #95b0e4;*/
 
 
 tbody.lines td input { width: 95%; }
 
-table.dyta tr.total.invalid td { color: #D20; }  
-table.dyta tr.total.valid   td { color: #090; }  
-table.dyta tr.last-entry    td { border-bottom: 2px solid #F77; }  
+table.kame tr.total.invalid td { color: #D20; }  
+table.kame tr.total.valid   td { color: #090; }  
+table.kame tr.last-entry    td { border-bottom: 2px solid #F77; }  
 
 div.fastadd { background: #FC8; text-align:center; padding: 4px; margin: 4px 0; }
 
@@ -570,7 +570,7 @@ html[dir="rtl"] .conveyor .cell.target, html[dir="ltr"] .conveyor .cell.source {
 .conveyor .cell.unique-tracking { background: #FE9; }
 .conveyor .cell.new { padding: 2px 4px; background: #FFD; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
 
-.conveyor .conveyor-input { width: 24px; background: url(../images/conveyor.png) no-repeat -8px center; }
+.conveyor .conveyor-input {  width: 24px; background: url(../images/conveyor.png) no-repeat -8px center; }
 .conveyor .conveyor-output { width: 32px; background: url(../images/conveyor.png) no-repeat -32px center; }
 html[dir="rtl"] .conveyor .conveyor-input { background-position: -32px center; }
 html[dir="rtl"] .conveyor .conveyor-output { background-position: 0px center; }
