--- a/app/views/accountancy/account.html.haml
+++ b/app/views/accountancy/account.html.haml
@@ -16,12 +16,12 @@
           %th=JournalEntry.human_attribute_name("credit")
         %tr.total
           %th=tc(:totals)
-          %td.value=number_to_accountancy(@totals[:debit])
-          %td.value=number_to_accountancy(@totals[:credit])
+          %td.value=number_bookkeep(@totals[:debit])
+          %td.value=number_bookkeep(@totals[:credit])
         %tr.total
           %th=tc(:balance)
-          %td.value=number_to_accountancy(@totals[:balance_debit])
-          %td.value=number_to_accountancy(@totals[:balance_credit])
+          %td.value=number_bookkeep(@totals[:balance_debit])
+          %td.value=number_bookkeep(@totals[:balance_credit])
 
 
 
